Revert some changes